# bg-scripts

./: .gitignore  README.md  makepdf.py  ngrams.py  pyproject.toml
makepdf/: constants.py  main.py  sheet.py
ngrams/: README.md  constants.py  dictionary.py  generator.py  main.py  utils.py  writer.py
nouns/: main.py
polysemy/: README.md  common.py  concrete.py  constants.py  csvreader.py  main.py  similarity.py  sorted.py
