[tool.poetry]
name = "positional-ngrams"
version = "0.1.0"
description = "Find the most common n-grams by position"
authors = ["Lucas Connors <lucas.revolutiontech@gmail.com>"]
license = "ISC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fpdf = "^1.7.2"
wordfreq = "^3.1.1"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
