[tool.poetry]
name = "bg-scripts"
version = "0.1.0"
description = "Various scripts for board game prototypes"
authors = ["Lucas Connors <lucas.revolutiontech@gmail.com>"]
license = "ISC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
nltk = "^3.8.1"
fpdf = "^1.7.2"
wordfreq = "^3.1.1"
pillow = "^10.4.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
