[tool.poetry]
name = "bg-scripts"
version = "0.1.0"
description = "Various scripts for board game prototypes"
authors = ["Lucas Connors <lucas.revolutiontech@gmail.com>"]
license = "ISC"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
nltk = "^3.9.1"
fpdf = "^1.7.2"
wordfreq = "^3.1.1"
pillow = "^10.4.0"
scipy = "^1.15.2"
sentence-transformers = "^3.4.1"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
